fix bug 78779: The right border of multiple date selection area is missing under shift trade request page
fix bug78779:The right border of multiple date selection area is missing under shift trade request page

Related work items: #78779

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ShiftTrade.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/ShiftTrade.css
@@ -519,6 +519,7 @@
 	height: 100px;
 	min-height: 100px;
 	border-left: 2px solid #5acdf9;
+	border-right: 1px solid #e3e3e3;
 }
 .multi-shift-trade-row > * {
 	float: left;
